--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,10 @@
                         <h2 class="title">Find Meals For Your Ingredient
                         </h2>
                         <blockquote>
-                            Real Food doesn't have ingredients<br>
-                            <cite> - Jamie olvier</cite>
+                         Get recipes to cook with <br>
                         </blockquote>
                         <div class = "meal-search-box">
-                            <input type = "text" class = "search-control" placeholder="Enter an ingredient" id = "search-input">
+                            <input type = "text" class = "search-control" placeholder="Enter an ingredient: rice" id = "search-input">
                             <button type = "submit" class = "search-btn btn" id = "search-btn">
                               <i class = "fas fa-search"></i>
                             </button>
@@ -46,8 +45,8 @@
                             <i class = "fas fa-times"></i>
                         </button>
                         <!--content-->
-                        <!--<div class="meal-details-content">
-                            <h2 class = "recipe-title">Meal Name here</h2>
+                        <div class="meal-details-content">
+                            <!-- <h2 class = "recipe-title">Meal Name here</h2>
                             <p class="recipe-category">Category</p>
                             <div class= " recipe-instrct">
                                 <h3>Instrctions:</h3>
@@ -58,9 +57,9 @@
                                 <img src="/static/images/food.jpg" alt="">
                             </div>
                             <div>
-                                <a href="#" target="_blank">Watch Video</a>
+                                <a href="#" target="_blank">Watch Video</a> -->
                             </div>
-                        </div>-->
+                        </div>
                     </div>
                 </div>
             </div>
